Modify the top bar to have a position fixed on the webpage in contrast to every other static element.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,13 @@ body {
   padding: 0;
   background-color: #ff0000;
   margin: 0;
-  background:url(../img/background.jpg);
+  background:url(../img/background.jpg) top right no-repeat; background-attachment:fixed;
+  background-position: center;
   background-repeat: repeat
-  /*background-position: center;*/
+}
+
+.container {
+  width: 100%;
 }
 
 .topbar {
@@ -18,9 +22,9 @@ body {
   border-style: solid;
   border-bottom: thick solid #0000ff;
   border-bottom-width: 25px;
-
   height: 170px;
-
+  position: fixed;
+  z-index: 10;
 }
 
 .topbar h1 {
@@ -47,11 +51,6 @@ body {
 
 
 .sidebar {
-  width:100%;
-  overflow-x: hidden;
-}
-
-.sidebar-container {
   width: 250px;
   overflow-x: hidden;
 }
@@ -88,4 +87,17 @@ body {
 .well-top p {
   font-size: 13px;
   color: #000000;
+}
+
+.about-me {
+  width: 100%;
+  margin-top: 50px;
+  text-indent: 50px;
+}
+
+.keanu {
+  width: 250px;
+  border-radius: 30px;
+  float: left;
+  margin-right: 25px;
 }
